--- a/bin/SITConnect.dll.config
+++ b/bin/SITConnect.dll.config
@@ -4,11 +4,20 @@
   https://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
+	<appSettings>
+		<add key="ValidationSettings:UnobtrusiveValidationMode" value="None"/>
+	</appSettings>
   <system.web>
     <sessionState mode="InProc" timeout="1" />
     <compilation debug="true" targetFramework="4.7.2" />
     <httpRuntime targetFramework="4.7.2" />
 
+    <!--
+	<customErrors mode="On" defaultRedirect="~/CustomError/GenericError.html" >
+	    <error statusCode="404" redirect="~/CustomError/HTTP404.html"/>
+	    <error statusCode="403" redirect="~/CustomError/HTTP403.html"/>
+    </customErrors>
+	-->
 	  
   </system.web>
   <connectionStrings>
