--- a/Web.config
+++ b/Web.config
@@ -9,17 +9,24 @@
 	</appSettings>
   <system.web>
     <sessionState mode="InProc" timeout="1" />
-    <compilation debug="true" targetFramework="4.7.2" />
+    <compilation debug="false" targetFramework="4.7.2" />
     <httpRuntime targetFramework="4.7.2" />
 
-    <!--
+    
 	<customErrors mode="On" defaultRedirect="~/CustomError/GenericError.html" >
 	    <error statusCode="404" redirect="~/CustomError/HTTP404.html"/>
 	    <error statusCode="403" redirect="~/CustomError/HTTP403.html"/>
     </customErrors>
-	-->
+	
 	  
   </system.web>
+<system.webServer>
+	<httpProtocol>
+		<customHeaders>
+			<add name="X-Frame-Options" value="SAMEORIGIN"/>
+		</customHeaders>
+	</httpProtocol>
+</system.webServer>
   <connectionStrings>
     <add name="MYDBConnection" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\Users\lowki\OneDrive\Desktop\NYP Y2\AS\PracAssignment\SITConnect\App_Data\SITConnectDB.mdf;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
